--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap');
+
+body {
+  margin: 0;
+  font-family: 'Commissioner', sans-serif;
+  font-size: 16px;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 300px 100px 1fr;
+  background: hsl(0, 0%, 97%);
+}
+/* Header section */
+.header {
+  background: url(../images/image-hero-desktop.jpg) no-repeat;
+  height: 400px;
+  grid-column: 1 / -1;
+  grid-row: 1 / 3;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 150px;
+}
+.header__image-block {
+  padding-top: 50px;
+}
+.header__nav {
+  padding-top: 50px;
+}
+.header__nav__menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+.header__nav__menu__item {
+  margin-left: 30px;
+}
+.header__nav__menu__link {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 500;
+}
+/* Main Section */
+.main {
+  grid-column: 2;
+  grid-row: 2 / -1;
+}
 /* Attribution Section */
 .attribution {
+  grid-column: 2;
+  margin: 50px 0 25px;
   font-size: 11px;
   text-align: center;
 }
