--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ body {
 /* Header section */
 .header {
   background: url(../images/image-hero-desktop.jpg) no-repeat;
-  height: 400px;
   grid-column: 1 / -1;
   grid-row: 1 / 3;
   display: flex;
@@ -24,6 +23,9 @@ body {
 }
 .header__nav {
   padding-top: 50px;
+}
+.header__nav__menu-button {
+  display: none;
 }
 .header__nav__menu {
   list-style: none;
@@ -53,4 +55,65 @@ body {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media all and (max-width: 568px) {
+  body {
+    grid-template-rows: 250px 50px 1fr;
+  }
+  /* Header section */
+  .header {
+    background: url(../images/image-hero-mobile.jpg) no-repeat;
+    background-size: cover;
+    padding: 0 20px;
+  }
+  .header__image-block {
+    padding-top: 25px;
+    z-index: 2;
+  }
+  .header__nav {
+    padding-top: 25px;
+    z-index: 2;
+  }
+  .header__nav__menu-button {
+    display: block;
+    background: transparent;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+  }
+  .background-fade {
+    display: none;
+    background: linear-gradient(rgb(0, 0, 0, 0.5), rgba(255, 255, 255, 0.2));
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    height: 100vh;
+    z-index: 1;
+  }
+  .header__nav__menu {
+    flex-direction: column;
+    position: absolute;
+    top: 90px;
+    left: 20px;
+    right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    background: #ffffff;
+    border-radius: 10px;
+  }
+  .hidden {
+    display: none;
+  }
+  .header__nav__menu__item {
+    margin-left: 0px;
+    padding: 24px 25px;
+    border-bottom: 1px solid hsl(0, 0%, 90%);
+  }
+  .header__nav__menu__item:last-child {
+    border-bottom: none;
+  }
+  .header__nav__menu__link {
+    color: #000000;
+    font-size: 18px;
+  }
 }
