--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,20 @@ body {
   grid-template-rows: 300px 100px 1fr;
   background: hsl(0, 0%, 97%);
 }
+.button {
+  background: hsl(176, 50%, 47%);
+  border: none;
+  border-radius: 50px;
+  padding: 15px 35px;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 14px;
+  cursor: pointer;
+}
+.button:hover,
+.button:focus {
+  background: hsl(176, 72%, 28%);
+}
 /* Header section */
 .header {
   background: url(../images/image-hero-desktop.jpg) no-repeat;
@@ -45,6 +59,64 @@ body {
 .main {
   grid-column: 2;
   grid-row: 2 / -1;
+}
+.main-background {
+  background: #ffffff;
+  border-radius: 10px;
+}
+/* Intro Block */
+.intro {
+  display: grid;
+  grid-template-rows: 23px 23px 1fr;
+}
+.intro__image-block {
+  grid-column: 1;
+  grid-row: 1 / 3;
+  justify-self: center;
+  z-index: 1;
+}
+.intro__text-block {
+  grid-column: 1;
+  grid-row: 2 / 4;
+  padding: 50px;
+  text-align: center;
+}
+.intro__text-block__title {
+  color: #000000;
+  font-size: 28px;
+  margin: 18px 0;
+}
+.intro__text-block__text {
+  color: hsl(0, 0%, 48%);
+  margin: 16px 0;
+}
+.intro__text-block__buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+.intro__text-block__buttons__button-two {
+  position: relative;
+  background: hsl(0, 0%, 92%);
+  padding: 20px 25px 20px 70px;
+  color: hsl(0, 0%, 48%);
+}
+.intro__text-block__buttons__button-two:hover,
+.intro__text-block__buttons__button-two:focus {
+  background: hsl(0, 0%, 92%);
+}
+.intro__text-block__buttons__button-two svg {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.intro__text-block__buttons__button-two:hover svg circle,
+.intro__text-block__buttons__button-two:focus svg circle {
+  fill: #5a5a5a;
+}
+.intro__text-block__buttons__button-two:hover svg path,
+.intro__text-block__buttons__button-two:focus svg path {
+  fill: rgb(184, 184, 184);
 }
 /* Attribution Section */
 .attribution {
