--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ body {
 .main {
   grid-column: 2;
   grid-row: 2 / -1;
+  position: relative;
 }
 .main-background {
   background: #ffffff;
@@ -240,10 +241,161 @@ body {
 .about__pledge-option__button[disabled] {
   cursor: unset;
 }
-/* back-project-modal */
+/* Modals */
+.modal-outer {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+/* Back-project-modal */
 .back-project-modal {
   display: none;
+  background: #ffffff;
+  position: absolute;
+  top: -100px;
+  z-index: 2;
+  padding: 25px 30px;
+  color: hsl(0, 0%, 48%);
 }
+.back-project-modal__close-icon {
+  position: absolute;
+  top: 20px;
+  right: 25px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+.back-project-modal__title {
+  font-size: 24px;
+  font-weight: 700;
+  margin: 20px 0;
+}
+.back-project-modal__form fieldset {
+  border: none;
+  padding: 0;
+}
+.back-project-modal__form__option {
+  border: 1px solid hsl(0, 0%, 80%);
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: 40px 2fr 1fr;
+  margin-top: 25px;
+}
+.back-project-modal__form__option__inner {
+  grid-column: 1 / -1;
+  grid-row: 1;
+  display: grid;
+  grid-template-columns: 40px 2fr 1fr;
+  padding: 30px 20px;
+}
+.back-project-modal__form__option__input {
+  grid-column: 1;
+  grid-row: 1;
+  justify-self: start;
+  align-self: start;
+}
+.back-project-modal__form__option__custom-input {
+  z-index: -1;
+  grid-column: 1;
+  grid-row: 1;
+  justify-self: start;
+  align-self: start;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 1px solid hsl(0, 0%, 80%);
+  border-radius: 50%;
+}
+.back-project-modal__form__option__label-block {
+  grid-column: 2;
+  grid-row: 1;
+  display: flex;
+}
+.back-project-modal__form__option__label {
+  color: #000000;
+  font-weight: 700;
+  font-size: 16px;
+  grid-column: 2;
+  grid-row: 1;
+  margin-right: 25px;
+}
+.back-project-modal__form__option__value {
+  color: hsl(176, 50%, 47%);
+  font-weight: 500;
+  grid-column: 2;
+  grid-row: 1;
+  justify-self: end;
+  margin-top: 0;
+}
+.back-project-modal__form__option__text {
+  grid-column: 2 / -1;
+  grid-row: 2;
+  line-height: 2;
+  margin: 10px 0;
+}
+.back-project-modal__form__option__left {
+  grid-column: 3;
+  grid-row: 1;
+  justify-self: end;
+  margin: 0;
+}
+.back-project-modal__form__option__left .number-bold {
+  font-size: 16px;
+  margin-right: 5px;
+}
+.back-project-modal__form__option__inner-two {
+  grid-column: 1 / -1;
+  grid-row: 2;
+  display: grid;
+  grid-template-columns: 40px 3fr 1fr 1fr;
+  grid-gap: 15px;
+  border-top: 1px solid hsl(0, 0%, 80%);
+  padding: 30px 20px;
+  display: none;
+}
+.back-project-modal__form__option__pledge-label {
+  grid-column: 1 / 3;
+  align-self: center;
+}
+.back-project-modal__form__option__pledge-input-block {
+  display: flex;
+  justify-self: end;
+  align-items: center;
+  grid-column: 3;
+  border: 1px solid hsl(0, 0%, 80%);
+  border-radius: 50px;
+  padding: 15px 20px;
+  width: 45%;
+  overflow: hidden;
+  color: hsl(0, 0%, 75%);
+  font-weight: 700;
+}
+.back-project-modal__form__option__pledge-input-block__input {
+  border: none;
+  outline: none;
+  margin-left: 10px;
+  font-weight: 700;
+  font-family: 'Commissioner', sans-serif;
+  font-size: 14px;
+}
+.back-project-modal__form__option__pledge-input-block__input::-webkit-outer-spin-button,
+.back-project-modal__form__option__pledge-input-block__input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+.back-project-modal__form__option__button {
+  grid-column: 4;
+  padding: 15px 20px;
+}
+/* Thanks Modal */
 .thanks-modal {
   display: none;
 }
