--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ body {
 }
 /* Modals */
 .modal-outer {
-  display: none;
+  /* display: none; */
   position: fixed;
   top: 0;
   left: 0;
@@ -254,7 +254,7 @@ body {
 }
 /* Back-project-modal */
 .back-project-modal {
-  display: none;
+  /* display: none; */
   background: #ffffff;
   position: absolute;
   top: -100px;
@@ -286,6 +286,9 @@ body {
   grid-template-columns: 40px 2fr 1fr;
   margin-top: 25px;
 }
+.back-project-modal__form__option.checked {
+  border: 2px solid hsl(176, 72%, 28%);
+}
 .back-project-modal__form__option__inner {
   grid-column: 1 / -1;
   grid-row: 1;
@@ -298,6 +301,11 @@ body {
   grid-row: 1;
   justify-self: start;
   align-self: start;
+  width: 20px;
+  height: 20px;
+  margin: 0;
+  opacity: 0;
+  cursor: pointer;
 }
 .back-project-modal__form__option__custom-input {
   z-index: -1;
@@ -310,6 +318,25 @@ body {
   height: 20px;
   border: 1px solid hsl(0, 0%, 80%);
   border-radius: 50%;
+  position: relative;
+}
+.back-project-modal__form__option__input:focus + .back-project-modal__form__option__custom-input {
+  outline: 1px solid hsl(176, 50%, 47%);
+}
+.back-project-modal__form__option__custom-input::before {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: hsl(176, 50%, 47%);
+  opacity: 0;
+}
+.back-project-modal__form__option__input:checked + .back-project-modal__form__option__custom-input::before {
+  opacity: 1;
 }
 .back-project-modal__form__option__label-block {
   grid-column: 2;
@@ -348,6 +375,7 @@ body {
   font-size: 16px;
   margin-right: 5px;
 }
+/* Inner Two Enter pledge section */
 .back-project-modal__form__option__inner-two {
   grid-column: 1 / -1;
   grid-row: 2;
