--- a/css/style.css
+++ b/css/style.css
@@ -447,6 +447,31 @@ input[type='number'] {
 /* Thanks Modal */
 .thanks-modal {
   display: none;
+  background: #ffffff;
+  position: absolute;
+  top: 190px;
+  z-index: 2;
+  padding: 50px;
+  color: hsl(0, 0%, 48%);
+  margin: 0 115px;
+  text-align: center;
+}
+.thanks-modal.open {
+  display: block;
+}
+.thanks-modal__image {
+  width: 80px;
+}
+.thanks-modal__title {
+  font-size: 24px;
+  margin: 40px 0 20px 0;
+}
+.thanks-modal__text {
+  line-height: 2;
+  margin: 15px 0;
+}
+.thanks-modal__button {
+  margin: 25px 0 0 0;
 }
 /* Attribution Section */
 .attribution {
