--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
 /* Header section */
 .header {
   background: url(../images/image-hero-desktop.jpg) no-repeat;
+  background-size: cover;
   grid-column: 1 / -1;
   grid-row: 1 / 3;
   display: flex;
@@ -507,10 +508,12 @@ input[type='number'] {
 
 @media all and (max-width: 568px) {
   body {
+    grid-template-columns: 1fr;
     grid-template-rows: 250px 50px 1fr;
   }
   /* Header section */
   .header {
+    grid-column: 1;
     background: url(../images/image-hero-mobile.jpg) no-repeat;
     background-size: cover;
     padding: 0 20px;
@@ -563,5 +566,77 @@ input[type='number'] {
   .header__nav__menu__link {
     color: #000000;
     font-size: 18px;
+  }
+  /* Main Section */
+  .main {
+    grid-column: 1;
+    margin: 0 20px;
+  }
+  /* Intro Block */
+  .intro__text-block {
+    padding: 35px 20px;
+    line-height: 1.7;
+  }
+  .intro__text-block__buttons {
+    display: grid;
+    grid-template-columns: 1fr 56px;
+    grid-gap: 15px;
+  }
+  .intro__text-block__buttons__button-two {
+    padding: 0;
+  }
+  .intro__text-block__buttons__button-two svg {
+    position: unset;
+  }
+  .intro__text-block__buttons__button-two__bookmark-text {
+    display: none;
+  }
+  /* Numbers section */
+  .numbers {
+    flex-direction: column;
+    align-items: center;
+  }
+  .numbers__block {
+    border-right: none;
+    border-bottom: 1px solid hsl(0, 0%, 80%);
+    padding-right: 0;
+    padding-bottom: 25px;
+    text-align: center;
+  }
+  .numbers__block:last-of-type {
+    border-bottom: none;
+    padding-bottom: 0;
+  }
+  .progress-bar {
+    width: 100%;
+  }
+  /* About section */
+  .about {
+    padding: 30px 15px;
+  }
+  .about__main-title {
+    margin: 0 0 5px 0;
+  }
+  .about__text {
+    line-height: 1.7;
+    margin: 20px 0;
+  }
+  .about__pledge-option {
+    display: block;
+    padding: 20px 20px 30px;
+  }
+  .about__pledge-option__title {
+    font-size: 16px;
+    margin: 0;
+  }
+  .about__pledge-option__text {
+    line-height: 1.7;
+  }
+  .about__pledge-option__left {
+    margin-bottom: 10px;
+  }
+  /* Attribution Section */
+  .attribution {
+    grid-column: 1;
   }
 }
