--- a/css/style.css
+++ b/css/style.css
@@ -303,16 +303,12 @@ body {
 .back-project-modal__form__option {
   border: 1px solid hsl(0, 0%, 80%);
   border-radius: 10px;
-  display: grid;
-  grid-template-columns: 40px 2fr 1fr;
   margin-top: 25px;
 }
 .back-project-modal__form__option.checked {
   border: 2px solid hsl(176, 72%, 28%);
 }
 .back-project-modal__form__option__inner {
-  grid-column: 1 / -1;
-  grid-row: 1;
   display: grid;
   grid-template-columns: 40px 2fr 1fr;
   padding: 30px 20px;
@@ -368,8 +364,6 @@ body {
   color: #000000;
   font-weight: 700;
   font-size: 16px;
-  grid-column: 2;
-  grid-row: 1;
   margin-right: 25px;
   cursor: pointer;
 }
@@ -379,9 +373,6 @@ body {
 .back-project-modal__form__option__value {
   color: hsl(176, 50%, 47%);
   font-weight: 500;
-  grid-column: 2;
-  grid-row: 1;
-  justify-self: end;
   margin-top: 0;
 }
 .back-project-modal__form__option__text {
@@ -402,8 +393,6 @@ body {
 }
 /* Inner Two Enter pledge section */
 .back-project-modal__form__option__inner-two {
-  grid-column: 1 / -1;
-  grid-row: 2;
   display: grid;
   grid-template-columns: 40px 3fr 1fr 1fr;
   grid-gap: 15px;
@@ -508,8 +497,33 @@ input[type='number'] {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+@media all and (max-width: 1110px) {
+  body {
+    grid-template-columns: 100px 1fr 100px;
+  }
+  .header {
+    padding: 0 100px;
+  }
+  .back-project-modal__form__option__pledge-input-block__input {
+    margin-left: 5px;
+  }
+  .thanks-modal {
+    margin: 0 100px;
+  }
+}
+@media all and (max-width: 760px) {
+  body {
+    grid-template-columns: 50px 1fr 50px;
+  }
+  .header {
+    padding: 0 50px;
+  }
+  .thanks-modal {
+    margin: 0 50px;
+  }
+}
 
-@media all and (max-width: 568px) {
+@media all and (max-width: 645px) {
   body {
     grid-template-columns: 1fr;
     grid-template-rows: 250px 50px 1fr;
